--- a/simple_c_app/CMakeLists.txt
+++ b/simple_c_app/CMakeLists.txt
@@ -1,6 +1,6 @@
-﻿px4_add_module(
+px4_add_module(
     MODULE examples__simple_c_app
-    MAIN px4_simple_app
+    MAIN simple_c_app
     STACK_MAIN 2000
     SRCS
         simple_c_app.c
