--- a/simple_subscribe/CMakeLists.txt
+++ b/simple_subscribe/CMakeLists.txt
@@ -1,8 +1,8 @@
-﻿px4_add_module(
-	MODULE examples__mysubscribe
-	MAIN mysubscribe
+px4_add_module(
+	MODULE examples__simple_subscribe
+	MAIN simple_subscribe
 	STACK_MAIN 2000
 	SRCS
-		mysub_main.cpp
+		simple_subscribe.cpp
 	DEPENDS
 	)
