--- a/mypublish/CMakeLists.txt
+++ b/mypublish/CMakeLists.txt
@@ -1,7 +1,6 @@
-﻿
 px4_add_module(
-	MODULE mypublish
-	MAIN mypublish
+	MODULE examples__mypub
+	MAIN mypub
 	STACK_MAIN 2000
 	SRCS
 		mypub_main.cpp
