--- a/mysubscribe/CMakeLists.txt
+++ b/mysubscribe/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿px4_add_module(
-	MODULE examples__mysubscribe
-	MAIN mysubscribe
+	MODULE examples__mysub
+	MAIN mysub
 	STACK_MAIN 2000
 	SRCS
 		mysub_main.cpp
